2010-10-16  Ben Abbott <bpabbott@mac.com>

	* plot/private/__errplot__.m, plot/errorbar.m: Allow line and marker
	types to be set.

2010-10-14  John W. Eaton  <jwe@octave.org>

	* special-matrix/rosser.m: New tests.
	* special-matrix/wilkinson.m: Fix error message.  New tests.
	* special-matrix/pascal.m: Error if T is out of range.
	New tests.

2010-10-14  John W. Eaton  <jwe@octave.org>

	* set/unique.m: Remove check for issparse existence since it is
	now a built-in function.

2010-10-14  Ben Abbott <bpabbott@mac.com>

	* strings/strjust.m: Clarify that justification  applies to spaces and
	null characters.

2010-10-09  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Enable linetypes for gnuplot.

2010-10-09  John W. Eaton  <jwe@octave.org>

	* statistics/distributions/geornd.m,
	* statistics/distributions/hygecdf.m,
	* statistics/distributions/hygeinv.m,
	* statistics/distributions/poissrnd.m, 
	* statistics/distributions/wblrnd.m:
	Use || instead of | and && instead of & in IF conditions
	involving scalars.

2010-10-09  John W. Eaton  <jwe@octave.org>

	* plot/__fltk_ginput__.m: Use || instead of | in IF condition.

2010-10-08  Ben Abbott <bpabbott@mac.com>

	* image/image.m, plot/__go_draw_axes__.m: Do not store flipped image
	property values when x/ydata descends.

2010-10-07  John W. Eaton  <jwe@octave.org>

	* signal/periodogram.m: Fix parse errors.

2010-10-07  John W. Eaton  <jwe@octave.org>

	* time/datevec.m: Use endfunction to mark end of primary
	function and subfunctions.

2010-10-07  Rik  <octave@nomad.inbox5.com>

	* polynomial/conv.m: Improve docstring.
	* signal/fftconv.m: Improve docstring and error messages.

2010-10-07  John W. Eaton  <jwe@octave.org>

	* polynomial/conv.m: Handle optional third argument.  New
	tests.  Update doc string.

2010-10-06  Ben Abbott  <bpabbott@mac.com>

	* image/image.m: Allow x/ydata to imply a flip of the image.
	Modify demos.

2010-10-05  Carlo de Falco  <kingcrimson@tiscali.it>
